feat(DATA-803): add id checking before filtering